syntax = "proto3";

option csharp_namespace = "GrpcDemo.Client";

package grpcdemo;

// The grpc service definition.
service GrpcDemo {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply);

  rpc GetTextStream(EmptyParams) returns (stream TextStreamResponse);

  rpc UpdateTextStream(stream UpdateTextStreamRequest) returns (UpdateTextStreamResponse);

  rpc ReverseText(stream ReverseTextRequest) returns (stream ReverseTextResponse);
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message HelloReply {
  string message = 1;
}

message TextStreamResponse {
  string line = 1;
}

message UpdateTextStreamRequest {
  string line = 1;
}

message UpdateTextStreamResponse {
  bool status = 1;
}

message ReverseTextRequest {
  string line = 1;
}

message ReverseTextResponse {
  string line = 1;
}

message EmptyParams {}